EC2.yaml
AWSTemplateFormatVersion: "2010-09-09"


Resources:

  MyVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      Tags:
        - Key: Name
          Value: seif-vpc	  
  MySubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref MyVPC
      MapPublicIpOnLaunch: true
      CidrBlock: "10.0.1.0/24"
      Tags:
        - Key: Name
          Value: seif-subnet-east1	  

  MyInternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties: {}
  
  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

  MyRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref MyVPC

  MyRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref MyInternetGateway
      
  SubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref MySubnet
      RouteTableId: !Ref MyRouteTable
    
    
  MySecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref MyVPC
      GroupDescription: "Allow SSH and HTTPS traffic"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort:  22
          ToPort:  22
          CidrIp: 102.184.139.175/32
        - IpProtocol: tcp
          FromPort:  443
          ToPort:  443
          CidrIp: 0.0.0.0/0

  MyEC2:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: t2.micro
      ImageId: ami-08b5b3a93ed654d19
      SubnetId: !Ref MySubnet
      Tags:
      - Key: Name
        Value: seifserver
      SecurityGroupIds:
        - !Ref MySecurityGroup
